# escher_motion_planning

./: CMakeLists.txt  Makefile  README.md  contact_space_planner.cpp  contact_space_planner.h  drawing.cpp  drawing.h  environment_handler.cpp  environment_handler.h  escher_motion_planning.cpp  escher_motion_planning.py  motion_plan.cpp  motion_plan.h  query.cpp  query.h  structures.cpp  structures.h  utility.cpp  utility.h
cmake/modules/: FindGUROBI.cmake
escher_model/: escher_cpp.srdf  escher_cpp.urdf
optimization/: Makefile  stretch  stretch.cpp
